--- a/app/index.html
+++ b/app/index.html
@@ -53,7 +53,7 @@
                             <a class="menu__list-link" href="#prices">Ціни</a>
                         </li>
                         <li class="menu__list-item">
-                            <a class="menu__list-link" href="#ourWorks">Наші роботи</a>
+                            <a class="menu__list-link" href="#portfolio">Наші роботи</a>
                         </li>
                         <li class="menu__list-item">
                             <a class="menu__list-link" href="#contacts">Контакти</a>
@@ -101,7 +101,7 @@
             
     
 
-    <section class="about">
+    <section class="about" id="about">
         <div class="container">
             <div class="about__inner">
                 <div class="about__left">
@@ -122,7 +122,7 @@
         </div>
     </section>
 
-    <section class="phase">
+    <section class="phase" id="phase">
         <div class="container">
             <h2 class="title phase-title">етапи роботи</h2>
             <h3 class="questions phase-questions">Як ми працюємо?</h3>
@@ -185,7 +185,7 @@
         </div>
     </section>
 
-    <section class="portfolio">
+    <section class="portfolio" id="portfolio">
         <div class="container">
             <h2 class="title portfolio-title">портфоліо</h2>
             <h3 class="questions portfolio-questions">Наші роботи</h3>
@@ -269,7 +269,7 @@
         </div>
     </section>
 
-    <section class="reviews">
+    <section class="reviews" id="reviews">
         <div class="container">
             <div class="reviews-wrapper">
                 <h2 class="title reviews-title">Відгуки</h2>
@@ -300,7 +300,7 @@
         </div>
     </section>
 
-    <section class="conect">
+    <section class="conect" id="contacts">
         <div class="container">
             <div class="conect-wrapper">
                 <h2 class="title conect-title">Зв"яжіться з нами</h2>
@@ -327,9 +327,9 @@
                     <p class="footer-top-logo-text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
                 </div>
                 <div class="footer-top__item">
-                    <a class="footer-categoory"href="#">Про нас</a>
-                    <a class="footer-categoory" href="#">Портфоліо</a>
-                    <a class="footer-categoory" href="#">Етапи роботи</a>
+                    <a class="footer-categoory"href="#about">Про нас</a>
+                    <a class="footer-categoory" href="#portfolio">Портфоліо</a>
+                    <a class="footer-categoory" href="#phase">Етапи роботи</a>
                 </div>
                 <div class="footer-top__item">
                     <div class="footer-contact"><span class="footer-contact-coun">УКРАЇНА,</span> м.Львів, вул. Зелена 230</div>
